--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header>
@@ -20,15 +16,19 @@
         <p>Day Beauty</p>
       </div>
       <nav>
-        <div class="topnav"></div>
-        <a href="">About</a>
-        <a href="">Philosophy</a>
-        <a href="">Services</a>
-        <a href="">Shop</a>
-        <a href="">Offers</a>
-        <a href="">Contacts</a>
-        <a href="" id="menu" class="icon">&#9776;</a>
+        <div class="topnav" id="Mytopnav">
+          <a href="">About</a>
+          <a href="">Philosophy</a>
+          <a href="">Services</a>
+          <a href="">Shop</a>
+          <a href="">Offers</a>
+          <a href="">Contacts</a>
+          <a href="" id="menu" class="icon">&#9776;</a>
+        </div>
       </nav>
     </header>
+    <main>
+      <img src="./assets/styles/images/front.svg" alt="" />
+    </main>
   </body>
 </html>
