--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
         </div>
       </nav>
     </header>
-    <main>
-      <img src="./assets/styles/images/front.svg" alt="" />
+    <main class="main">
+      <div>
+        <img
+          src="./assets/styles/images/front.svg"
+          class="coverpic"
+          alt="Girl face"
+        />
+      </div>
+      <div>
+        <img src="./assets/styles/images/Be.png" class="text" />
+      </div>
     </main>
   </body>
 </html>
