--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
         />
       </div>
       <div>
-        <img src="./assets/styles/images/Be.png" class="text" />
+        <img src="./assets/styles/images/Be.png" class="text " alt"slogan"/>
+      </div>
+      <div class="pics">
+        <img src="./assets/styles/images/massage.jpg" alt="massage" />
+        <img src="./assets/styles/images/beauty.jpg" alt="beauty" />
       </div>
     </main>
   </body>
