--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
         </div>
       </nav>
     </header>
-    <main class="main">
-      <div>
-        <img
-          src="./assets/styles/images/front.svg"
-          class="coverpic"
-          alt="Girl face"
-        />
-      </div>
-      <div>
-        <img src="./assets/styles/images/Be.png" class="text " alt"slogan"/>
-      </div>
+    <main class="container">
       <div class="pics">
-        <img src="./assets/styles/images/massage.jpg" alt="massage" />
-        <img src="./assets/styles/images/beauty.jpg" alt="beauty" />
+        <img src="./assets/styles/images/Be.png" class="pic1" alt="slogan" />
+        <img
+          src="./assets/styles/images/beauty.jpg"
+          class="pic2"
+          alt="beauty"
+        />
+        <img
+          src="./assets/styles/images/massage.jpg"
+          class="pic3"
+          alt="massage"
+        />
       </div>
     </main>
   </body>
