--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <main class="container">
-      <div class="pics">
+      <div>
         <img src="./assets/styles/images/Be.png" class="pic1" alt="slogan" />
         <img
           src="./assets/styles/images/beauty.jpg"
@@ -42,5 +42,61 @@
         />
       </div>
     </main>
+    <footer class="footer">
+      <div class="container footer-wrapper">
+        <div class="footer-block"></div>
+        <div class="footer-block">
+          <span class="footer-title"></span>
+          <ul class="footer-menu">
+            <li class="footer-item">
+              <a href="" class="footer-link">About us </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link">Service</a>
+            </li>
+            <li class="footer-item"><a href="" class="footer-link"></a>Menu</li>
+          </ul>
+        </div>
+        <div class="footer-block">
+          <span class="footer-title"></span>
+          <ul class="footer-menu">
+            <li class="footer-item">
+              <a href="" class="footer-link">Reviw</a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link">Update</a>
+            </li>
+            <li class="footer-item"><a href="" class="footer-link">News</a></li>
+          </ul>
+        </div>
+        <div class="footer-block">
+          <span class="footer-title"></span>
+
+          <ul class="footer-social">
+            <li>
+              <a href=""
+                ><img
+                  src="./assets/styles/images/socials/facebook.svg"
+                  alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./assets/styles/images/socials/instagram.svg"
+                  alt="instagram"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./assets/styles/images/socials/twitter.svg"
+                  alt="twitter"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
